@@ -1,3 +1,7 @@
+2002-07-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* Configuration.*, exult.cc: added -c option for alternate config files
+	  (quite useful if you have multiple data dirs or languages of BG/SI)
+
 2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* objs/chunks.cc: Fixed bug where cart could get stuck on a step.
